# pace26-exact

./: .gitignore  Cargo.toml  README.md  docker_setup.sh
src/: lib.rs
src/alg_af_dfs/: instance_ext.rs  logging.rs  mod.rs  reductions.rs  solver.rs  state.rs
src/alg_combined/: combined_af_dbs.rs  mod.rs  solver.rs
src/alg_hitting_pair_dbs/: cluster_reduction.rs  hitting_pair_dbs.rs  logging.rs  mod.rs
src/common/: generation_set.rs  helpers.rs  mod.rs  reading.rs  validity.rs
src/maf_instance/: arena_tree.rs  arena_vertex.rs  instance.rs  mod.rs  performed_reduction.rs  tree_traversal.rs
