[package]
name = "pace26-exact"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.15.0"
pace26io = "0.2.0"
rustc-hash = "2.1.3"
smallvec = "1.15.2"

[features]
logging = []
assert_validity = []

# add some more optimization in release mode
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
